2002-10-27  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filebuffer.cc (find_matches): Correctly forward one character
	rather than one byte after matching the empty string twice.  Also,
	improve cancellation response by moving the signal_pulse() emission
	into the inner loop (shouldn't harm performance since we emit only
	once for 128 iterations anyway).

2002-10-26  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/fileio.{cc,h} src/filelist.{cc,h}: Make the fallback
	encoding configureable, so that it can be changed from the
	preferences dialog.

	* src/prefdialog.{cc,h} src/mainwindow.cc: Honor the preference
	setting of the fallback encoding.

2002-10-26  Daniel Elstner  <daniel.elstner@gmx.net>

	* pixmaps/stock_menu_about.png: New image stolen from Gnome2.
	* pixmaps/Makefile.am src/main.cc: Register the new stock image.

	* src/prefdialog.{cc,h}: New files, implemening the preferences
	dialog.  The about box is integrated as second notebook page,
	because I couldn't think of a better place to put it.

	* src/mainwindow.{cc,h}: Make the preferences tool button work.

2002-10-26  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/main.cc: Set a global window icon list.

	* src/mainwindow.cc: Consider both the movement buttons and the
	replace buttons as part of the "action area".  This fixes wrong
	sensitivity of the movement buttons during busy actions.

2002-10-26  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/statusline.{cc,h}: Install an accelerator key (Escape) for
	the cancel button.

2002-10-26  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filelist.{cc,h} src/mainwindow.{cc,h}: Major cleanup of the
	busy action cancelation code.  The new code is now centralized in
	class MainWindow, and has been merged with the progressbar pulse
	notification and busy GUI updating.

	* src/filebuffer.{cc,h}: Implement support for cancelation of busy
	actions such as find_matches(), using the new scheme described
	above.
